# sentrysearch

./: README.md  README.zh.md  pyproject.toml
.cursor/rules/: git-commits.mdc
sentrysearch/: cli.py  embedder.py  highlights.py  qwen_cloud_embedder.py  store.py
tests/: test_cli.py  test_embedder.py  test_qwen_cloud_embedder.py  test_store.py
