[project]
name = "sentrysearch"
version = "0.1.0"
description = "Search video footage using natural language queries"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click>=8.1",
    "python-dotenv>=1.0",
    "chromadb>=0.4",
    "google-genai>=1.0",
    "imageio-ffmpeg>=0.5",
    "protobuf>=4.0,<7",
]

[project.optional-dependencies]
tesla = ["geopy"]
local = [
    "torch>=2.0",
    "torchvision>=0.15,<0.22",
    "transformers>=5.3",
    "accelerate",
    "qwen-vl-utils",
    "torchcodec>=0.6",
]
local-quantized = [
    "torch>=2.0",
    "torchvision>=0.15,<0.22",
    "transformers>=5.3",
    "accelerate",
    "qwen-vl-utils",
    "torchcodec>=0.6",
    "bitsandbytes",
]
qwen-cloud = [
    "dashscope>=1.25.17",
]

[project.scripts]
sentrysearch = "sentrysearch.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentrysearch"]

[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.uv]
constraint-dependencies = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-proto>=1.25.0",
]

# PyPI ships CPU-only torch wheels on Windows, so users with NVIDIA GPUs would
# silently get a CPU build. Pull from PyTorch's CUDA index on Windows only;
# Linux already gets CUDA-enabled wheels from PyPI, and macOS needs PyPI for MPS.
[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sentrysearch"]
omit = ["sentrysearch/dashcam_pb2.py"]

[tool.coverage.report]
show_missing = true
